# ecs

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  HOUSEKEEPING.md  IMPLEMENTATION.md  PERFORMANCE.md  SPEC.md
benchmarks/: bench.cpp
docs/rfcs/: README.md
docs/rfcs/02-implemented/: 0000-library-baseline.md  0001-hot-path-performance.md
examples/: CMakeLists.txt
examples/stress_harness/: CMakeLists.txt  README.md  main.cpp
examples/visual_harness/: CMakeLists.txt  README.md  main.cpp
include/ecs/: archetype.hpp  command_buffer.hpp  component.hpp  ecs.hpp  entity.hpp  math.hpp  prefab.hpp  serialization.hpp  system.hpp  world.hpp
include/ecs/builtin/: hierarchy.hpp  hierarchy_ops.hpp  transform.hpp  transform_propagation.hpp
include/ecs/integration/: glm.hpp
include/ecs/modules/: hierarchy_ops.hpp  transform.hpp  transform_propagation.hpp
tests/: main.cpp
